--- a/index.html
+++ b/index.html
@@ -79,43 +79,43 @@
                 <h3>Cecília A</h3>
                 <img src="estrela.png" width="20px" height="20"> <img src="estrela.png" width="20px" height="20"> <img src="estrela.png" width="20px" height="20"> <img src="estrela.png" width="20px" height="20"> <img src="estrela.png" width="20px" height="20">
                 <p >Chinelo bom e confortável<br> agradeço muito ao vendedor.</p>
-                <img src="dp1.png" alt="Produto 1" width="180px" height="280"px> 
+                <img class="dp1" src="dp1.png" alt="Produto 1"> 
             </div>
             <div class="depoimentos-ind">
                 <h3>Luiza C</h3>
                 <img src="estrela.png" width="20px" height="20"> <img src="estrela.png" width="20px" height="20"> <img src="estrela.png" width="20px" height="20"> <img src="estrela.png" width="20px" height="20"> <img src="estrela.png" width="20px" height="20">
                 <p>Muito macio, super recomendo,<br> chegou muito rápido.</p>
-                <img src="dp2.png" alt="Produto 1" width="180px" height="280"px> 
+                <img class="dp1" src="dp2.png" alt="Produto 1"> 
             </div>
             <div class="depoimentos-ind">
                 <h3>Raquel Macena</h3>
                 <img src="estrela.png" width="20px" height="20"> <img src="estrela.png" width="20px" height="20"> <img src="estrela.png" width="20px" height="20"> <img src="estrela.png" width="20px" height="20"> <img src="estrela.png" width="20px" height="20">
                 <p>É minha segunda compra,<br> comprei para o meu irmão,<br> chinelo muitoo topp.</p>
-                <img src="dp3.png" alt="Produto 1" width="180px" height="280"px> 
+                <img class="dp1" src="dp3.png" alt="Produto 1"> 
             </div>
             <div class="depoimentos-ind">
                 <h3>Isabel P</h3>
                 <img src="estrela.png" width="20px" height="20"> <img src="estrela.png" width="20px" height="20"> <img src="estrela.png" width="20px" height="20"> <img src="estrela.png" width="20px" height="20"> <img src="estrela.png" width="20px" height="20">
                 <p>Acabou de chegar, adooorei,<br> muito confortavel.</p>
-                <img src="dp4.png" alt="Produto 1" width="180px" height="280"px> 
+                <img class="dp1" src="dp4.png" alt="Produto 1"> 
             </div>
             <div class="depoimentos-ind">
                 <h3>Fernanda L</h3>
                 <img src="estrela.png" width="20px" height="20"> <img src="estrela.png" width="20px" height="20"> <img src="estrela.png" width="20px" height="20"> <img src="estrela.png" width="20px" height="20"> <img src="estrela.png" width="20px" height="20">
                 <p>Comprei pra mim e para os <br>meus pais, todo mundo amou, <br>muito bonito e confortavel.</p>
-                <img src="dp5.png" alt="Produto 1" width="200px" height="280px"> 
+                <img class="dp1" src="dp5.png" alt="Produto 1"> 
             </div>
             <div class="depoimentos-ind">
                 <h3>Rodrigo C</h3>
                 <img src="estrela.png" width="20px" height="20"> <img src="estrela.png" width="20px" height="20"> <img src="estrela.png" width="20px" height="20"> <img src="estrela.png" width="20px" height="20"> <img src="estrela.png" width="20px" height="20">
                 <p>Acabou de chegar,uperou<br>superou minhas expectativas.</p>
-                <img src="dp6.png" alt="Produto 1" width="180px" height="280px"> 
+                <img class="dp1" src="dp6.png" alt="Produto 1"> 
             </div>
             <div class="depoimentos-ind" id="texto">
                 <h3>Fernanda Lima</h3>
                 <img src="estrela.png" width="20px" height="20"> <img src="estrela.png" width="20px" height="20"> <img src="estrela.png" width="20px" height="20"> <img src="estrela.png" width="20px" height="20"> <img src="estrela.png" width="20px" height="20">
                 <p>Parabéns comprei e adorei<br> confortavél e veio rapído.</p>
-                <img src="dp7.png" alt="Produto 1" width="200px" height="280px"> 
+                <img class="dp1" src="dp7.png" alt="Produto 1"> 
             </div>
     </section>
     <section id="garantia">
