--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
             </div>
             <div class="FAQ">
                 <cite>Como faço para comprar um produto?
-                <p>Você pode comprar pelo nosso site.<br> Ou entrar em contato com nossa equipe de vendas:<br> e-mail: atendimentos@navegandoweb.<br> whatsapp: (11) 9.7665-6368.</p> 
+                <p>Você pode comprar pelo nosso site.<br> Ou entrar em contato com nossa equipe de vendas:<br> e-mail: atendimentos@navegandoweb.com<br> whatsapp: (11) 9.7665-6368.</p> 
             </div>
             <div class="FAQ">
                 <cite>Quais as formas de pagamento são aceitas?
