--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <p class="descricao"><img src="validado2.png" width="13px" height="13""> Design moderno</p>
             <p class="descricao"><img src="validado2.png" width="13px" height="13"> Alta segurança</p>
             <a href="https://navegandoweb.com/produto/chinelo-ortopedico-top-comfort-smile/" target="_self" class="btn">COMPRAR</a><br>
-            <iframe class="video" src="https://www.youtube.com/embed/F5vo4uiY8ho?si=SRN9gJm8I15-2SKn" frameborder="0" allowfullscreen></iframe><br>
+            <iframe class="video" src="https://www.youtube.com/embed/F5vo4uiY8ho?si=SRN9gJm8I15-2SKn&autoplay=1&mute=1"" frameborder="0" allowfullscreen></iframe><br>
             <a href="https://navegandoweb.com/produto/chinelo-ortopedico-top-comfort-smile/" target="_self" class="btn">COMPRAR</a><br>
             <div id="img2">
             <img  class="img2" src="chinelo-flipflop-4.png" alt="Descrição da Imagem" >
