--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <img src="12.png" alt="Produto" class="produto-img"> 
         <div class="descricao-pro">
           <h2 class="nome-produto">Chinelo Top Comfort Smile</h2>
-          <<p class="descricao-produto">Preço promocional, garanta o seu, últimas unidades!<br><br> ***FRETE GRÁTIS***<br><br> 7 DIAS DE GARANTIA, SEU DINHEIRO DE VOLTA!</p>
+          <p class="descricao-produto">Preço promocional, garanta o seu, últimas unidades!<br><br> ***FRETE GRÁTIS***<br><br> 7 DIAS DE GARANTIA, SEU DINHEIRO DE VOLTA!</p>
           <div class="precos">
             <span class="preco-antigo">R$ 299,99</span><br>
             <span class="preco-atual">R$ 167,64</span>
